# KayakLogger

./: .cproject  .gitignore  .gitmodules  .project  AsyncWebServerWrapper.cpp  AsyncWebServerWrapper.h  AverageSpeed.cpp  AverageSpeed.h  CMakeLists.txt  Components.cpp  Components.h  Distance.cpp  Distance.h  ElementQueue.cpp  ElementQueue.h  GpsReport.cpp  GpsReport.h  HallSwitch.h  KayakLogger.ino  LcdDbg.cpp  LcdDbg.h  LcdIf.cpp  LcdIf.h  Logger.cpp  Logger.h  Logger_esp8266.cpp  Loop.cpp  Loop.h  PaddleImuReport.cpp  PaddleImuReport.h  PinLayout.h  PreCompilerOptions.h  README.md  SdWrapper.cpp  SdWrapper.h  Setup.cpp  Setup.h  StatusIndicator.cpp  StatusIndicator.h  TiltReport.cpp  (+3 more)
KayakLogger/: KayakLogger.ino
cmake/atmega328/: CMakeLists.txt
cmake/esp8266/: CMakeLists.txt
cmake/esp8266_12e/: CMakeLists.txt
cmake/esp_wroom32/: CMakeLists.txt
cmake/paddleimu/: CMakeLists.txt
cmake/paddleimu/targets/wroom32/: CMakeLists.txt
cmake/ut/: CMakeLists.txt
kicad/esp32_mpu9250/: esp32_mpu9250.kicad_pcb  esp32_mpu9250.net  esp32_mpu9250.sch
kicad/kayak_logger_esp32/: kayak_logger_esp32.kicad_pcb  kayak_logger_esp32.net  kayak_logger_esp32.sch
post_processing/: file_reader.py  gps_database.py  graphs.py  scope.py  tilt_graph.py  tilt_logger_database.py
unit_tests/: CMakeLists.txt  TestAccelerometer.cpp  TestDistance.cpp  TestElementQueue.cpp  TestGpsReport.cpp  TestLogger.cpp  TestLoop.cpp  TestPaddleImuReport.cpp  TestSetup.cpp  TestStatusIndicator.cpp  TestTiltReport.cpp  test_main.cpp
unit_tests/stubs/: Arduino.cpp  Arduino.h  FakeLiquidCrystal.cpp  FakeLiquidCrystal.h  FakeSdFat.cpp  FakeSdFat.h  FakeSoftwareSerial.cpp  FakeSoftwareSerial.h  FakeTinyGPS.cpp  FakeTinyGPS.h  Print.h  Wire.cpp  Wire.h
